# introspection-research

./: .gitignore  AGENTS.md  PAPER.MD  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
introspect/: __init__.py
introspect/concepts/: words.yaml
introspect/configs/: supervised_config.yaml
introspect/registry/: models.yaml
introspect/src/: eval_A_injected_report.py  eval_B_thoughts_vs_text.py  eval_C_prefill_intent.py  eval_D_intentional_control.py  eval_common.py  generation.py  grading.py  inject.py  io_utils.py  plotting.py  prompts.py  sweep.py  vectors.py
introspect/src/adapters/: __init__.py  base.py  (+5 more)
introspect/tests/: test_adapters.py  test_analysis_data_quality.py  test_eval_tasks.py  test_generation_chat.py  test_grading.py  test_inject.py  test_io_utils.py  test_postprocess.py  test_prompts.py  test_sweep.py  test_task_a_sanity.py  test_tasks_smoke.py  test_training.py  test_vectors.py  utils.py
local_tiny_llama/: chat_template.jinja  config.json  generation_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
notebooks/: PrimeIntellect_Runbook.ipynb
results/: probe_feasibility.json
results/archive/: task_B.jsonl
results/archive_20251109_030417/: task_A_local_tiny_llama.jsonl
results/dpo_qwen/: comparison.json
results/meta-llama__Meta-Llama-3.1-8B/: task_A.jsonl  task_A_test.jsonl
results/probe_feasibility/: llama-2-7b.json  llama-3.1-8b.json  llama-7b.json  qwen-7b.json
training/: __init__.py  data_generation.py  evaluate_introspection.py  probe_feasibility.py  probes.py  train_dpo.py
(+2528 files in other folders)
